--- a/index-js-p5-jathp-5.html
+++ b/index-js-p5-jathp-5.html
@@ -264,8 +264,8 @@
          (botx (js "g_bot.x"))
          (boty (js "g_bot.y")))
     ;;(logr (stgr (list "draw sctrl,pix x,y =" sctrl pix xx yy )))
-    (js (concat "draw_sprite_in_cell(" 2 "," botx "," boty ")"))
-    (js (concat "draw_sprite_in_cell(" 0 "," 35 "," 26 ")"))))
+    (js (concat "draw_sprite_in_cell(" 2 "," botx "," boty ")"))))
+;;    (js (concat "draw_sprite_in_cell(" 0 "," 35 "," 26 ")"))))
 
 ;;    (if (= 0 sctrl)
 ;;        (let ( )
