--- a/index-js-p5-jathp-5.html
+++ b/index-js-p5-jathp-5.html
@@ -297,24 +297,6 @@
     (js (concat "draw_sprite_in_cell(" 2 "," botx "," boty ")")))
 )
 
-;;    (if (= 0 sctrl)
-;;        (let ( )
-;;          (js "stroke( 'gray' )" )
-;;          (js "fill(204, 102, 0)" ) ;;red
-;;          ;(logr "draw g_sctrl === 0" )
-;;          (jp-rect xx yy zin zin)
-;;          ;; Save red tile cell loc.
-;;          (set-red (list botx boty))
-;;          )
-;;      (let ( )
-;;        (js "stroke( 'gray' )" )
-;;        (js "fill( 'black' )")
-;;        ;(logr "draw g_sctrl !=== 1" )
-;;        ;;(jp-circle xx yy zin)
-;;        (set-black (list botx boty))
-;;        (jp-rect xx yy zin zin)) )
-;;    (logr (list "red-tiles =" red-tiles))))
-
 
 (defun jp-draw-goal ( )
   (let* ((sz (js "g_grid.cell_size"))
@@ -474,27 +456,18 @@
 
 <script type="text/lisp">
 
-    ;; (F)unction used to extract value from object to compare
-    ;; (V)alue to be inserted in the list
+    ;; (F)unction to transform values to compare
+    ;; (i.e. (insert sqrt (2 2) ((1 2) (3 3))) => ((1 2) (2 2) (3 3))
+    ;; (N)node to be inserted in the list
     ;; (L)ist
-    (defun insert (F V L)
-        (if (and L (< (F (head L)) (F V)) )   ;; Compare. Is F(first node) < V
+    (defun insert (F N L)
+        (if (and L (< (F (head L)) (F N)) )
             ;; Yes, then the V must be inserted after n.
-            (cons (head L) (insert F V (tail L)) )
+            (cons (head L) (insert F N (tail L)) )
             ;; No, append to front
-            (cons V L)
+            (cons N L)
         )
     )
-
-    ;; (def M '((1 3) (1 7) (2 2) (4 3)) )
-    ;; (setq M (insert head '(4 1) M))
-    ;; (logr (list "Insert (4 1) " M ))
-
-    ;; This returns 't. So (7 (1 2)) = (7 (1 2)) according to lisp even though they are copies.
-    ;; Value comparison
-    ;;(logr (list "Equality " (cons 7 (cons (cons 1 (cons 2 nil)) nil)) " "
-        ;;(equal (cons 7 (cons (cons 1 (cons 2 nil)) nil)) (cons 7 (cons (cons 1 (cons 2 nil)) nil)) ) ))
-
 
     ;; These are the candidates for the robot to move to next.
     ;; If the robot finds a better move along a different route,
@@ -509,6 +482,40 @@
 
     ;; Best path / Current path
     (def path '())
+
+
+    ;; Distance from to this node along the current path.
+    ;; In other words, how far away is this node from where the robot started its best path.
+    ;; Taxi-cab geometry is not Euclidean
+    ;; Distance between gx,gy and x,y is just (gx - x) + (gy - y)
+    (defun Fn (node)
+        (+ (abs (length path)) 1)      ;; return the length of the current path + 1
+    )
+
+    ;; Distance from node to goal
+    ;; Taxi-cab geometry is not Euclidean
+    ;; Distance between gx,gy and x,y is just (gx - x) + (gy - y)
+    (defun Gn (node)
+        (let* ((gx (js "g_goal.x")) (gy (js "g_goal.y"))
+                (x (abs (car node))) (y (abs (cdr node))))
+           (+ (- gx x) (- gy y))
+        )
+    )
+
+    ;; H (n) = G (n) + F (n)
+    (defun Hn (node) (+ (Fn node) (Gn node)))
+
+
+
+    ;; Add start position to open set and current path
+    (let* ( (x (js "g_bot.x")) (y (js "g_bot.y"))
+            (n (list x y)))
+        (def closed (list n) )
+        (def path (list n) )
+    )
+
+
+
 
     (defun get-tile-type ( x y )
         (let* ((rows maze1-row-runs)
@@ -564,28 +571,6 @@
         )
     )
 
-
-    ;; Distance from to this node along the current path.
-    ;; In other words, how far away is this node from where the robot started its best path.
-    ;; Taxi-cab geometry is not Euclidean
-    ;; Distance between gx,gy and x,y is just (gx - x) + (gy - y)
-    (defun Fn (node)
-        (+ (abs (length path)) 1)      ;; return the length of the current path + 1
-    )
-
-    ;; Distance from node to goal
-    ;; Taxi-cab geometry is not Euclidean
-    ;; Distance between gx,gy and x,y is just (gx - x) + (gy - y)
-    (defun Gn (node)
-        (let* ((gx (js "g_goal.x")) (gy (js "g_goal.y"))
-                (x (abs (car node))) (y (abs (cdr node))))
-           (+ (- gx x) (- gy y))
-        )
-    )
-
-    ;; H (n) = G (n) + F (n)
-    (defun Hn (node) (+ (Fn node) (Gn node)))
-
     (defun goto (n)
         (let* ((botx (js "g_bot.x"))
                (boty (js "g_bot.y"))
@@ -600,10 +585,6 @@
 
             ;; Draw bot
             (jp-draw-bot)
-
-            ;; Re-draw previous cell.
-            ;; (js (concat "draw_sprite_in_cell(" 1 "," botx "," boty ")"))
-            ;; (text-in-cell (Hn (cons botx (cons boty nil) ) ) botx boty)
         )
     )
 
@@ -612,42 +593,36 @@
 
             (logr (list "Open " open))
 
-            ;; 1. If open, move to open with lowest H(n)
             (if open
                 (let ( (node (car open)) )
 
-                    ;; 1. If node is not a neighbor, it is not on the current best path.
-                    ;;    "Rewind" path until (find node neighbors) = 't
-                    ;;    This is the place in the path where the next best H is located
-                    ;;    since they are inserted in order. Choose this new path.
-                    ;; 2.
+                    ;; If node is not a neighbor, it is not on the current best path.
+                    ;; "Rewind" path until (find node neighbors) = 't
+                    ;; This is the place in the path where the next best H is located
+                    ;; since they are inserted in order. Choose this new path.
 
-
-
-                    (goto (cadr node))          ;; (H (x,y)) tail is coords.
+                    (goto node)          ;; (H (x,y)) tail is coords.
                     (def path (append path (cons node nil)))
                     (def open (cdr open))       ;; remove node from open
                     (def closed (append closed (cons node nil)))  ;; append node to closed
                 )
-                nil ;; (def open (list (list (Hn n) n)))
+                nil
             )
 
             (logr (list "Path " path))
             (logr (list "Closed " closed))
 
-            ;; 2. Get new neighbors, add to open, draw H(n) values in neighbors
+            ;; Get-neighbors
             (setq neighbors (get-neighbors))
-            (while neighbors
-                (let* ((n (head neighbors))
-                       (H (Hn n)))
 
-                    (logr (list "Neighbor: " n ))
+            (while neighbors
+                (let* ((n (head neighbors)))
 
                     ;; Draw tile sprite
                     (js (concat "draw_sprite_in_cell(" 1 "," (car n) "," (cdr n) ")"))
 
                     ;; Draw current best path color
-                    (if (find cadr n path)
+                    (if (member n path)
                         (let ((sz (js "g_grid.cell_size")))
                             (logr (concat "Draw blue in cell " (car n) "," (cdr n)))
                             (js "fill(0,210,255,180)")
@@ -657,14 +632,16 @@
                     )
 
                     ;; Draw number in cell
-                    (text-in-cell H (car n) (cdr n))
+                    (text-in-cell (Hn n) (car n) (cdr n))
 
+                    (let ((already-visited (member n closed)))
+                        (if already-visited
+                            ;; Found. Update Hn
+                            (logr (concat "Already Visited " n))
+                            ;; Not found. insert
+                            (def open (insert Hn n open ))
+                        )
 
-                    (if (find cadr n closed)
-                        ;; Found. Update Hn
-                        (logr (concat "Already Visited " n))
-                        ;; Not found. insert
-                        (def open (insert head (list H n) open ))
                     )
 
                 )
@@ -675,9 +652,6 @@
 
     )
 
-    ;; (def M '((1 3) (1 7) (2 2) (4 3)) )
-    ;; (setq M (insert head '(4 1) M))
-    ;; (logr (list "Insert (4 1) " M ))
 
     (defun text-in-cell (text x y)
         (let* ((sz (js "g_grid.cell_size"))
